Added warning popup and apk file

--- a/App/splitreceipt.kv
+++ b/App/splitreceipt.kv
@@ -15,26 +15,26 @@ ScreenManager:
         Button:
             id: to_grscreen_btn
             text: "Go to Grid Screen"
-            on_release: app.root.current = "grid_screen"
-            size_hint_y: 0.11111
+            on_release: root.switch_to_grid_screen()
+            size_hint_y: 0.1
 
         #--- Below button
         BoxLayout:
             id: mn_sub_bxlt
             orientation: 'horizontal'
-            size_hint_y: 1
+            size_hint_y: 0.9
 
             #--- Left layout
             BoxLayout:
                 id: mn_left_bxlt
                 orientation: 'vertical'
-                size_hint_x: 1
+                size_hint_x: 0.6
 
                 #--- Left Scrollview 
                 ScrollView:
                     id: mn_left_scview
                     do_scroll_y: True
-                    size_hint_y: 1
+                    size_hint_y: 0.6
 
                     GridLayout:
                         id: mn_left_scview_grdlt
@@ -47,7 +47,7 @@ ScreenManager:
                 BoxLayout:
                     id: mn_left_sbtotal_bxlt
                     orienation: 'horizontal'
-                    size_hint_y: 0.07694
+                    size_hint_y: 0.05
 
                     Label:
                         id: mn_left_sbtotal_label_desc
@@ -60,39 +60,38 @@ ScreenManager:
                 #--- Tax row
                 BoxLayout:
                     id: mn_left_sbtotal_bxlt
-                    size_hint_y: 0.07694
+                    size_hint_y: 0.05
                     orientation: 'horizontal'
 
                     Label:
                         id: mn_left_tax_label_desc
                         text: "Tax $:"
                         
-                    CurrencyTextInput:
+                    Button:
                         id: mn_left_tax_txinput
-                        multiline: False
-                        hint_text: "0.00"
-                        on_text: root.update_taxtip()
-
+                        text: "0.00"
+                        on_release: root.update_taxtip_popup()
+                        
                 #--- Tip row
                 BoxLayout:
                     id: mn_left_tip_bxlt
                     orientation: 'horizontal'
-                    size_hint_y: 0.07694
+                    size_hint_y: 0.05
                     
                     Label:
                         id: mn_left_tip_label_desc
                         text: "Tip $:"
 
-                    CurrencyTextInput:
+                    Button:
                         id: mn_left_tip_txinput
-                        hint_text: "0.00"
-                        on_text: root.update_taxtip()
-
+                        text: "0.00"
+                        on_release: root.update_taxtip_popup()
+                        
                 #--- Grand Total row
                 BoxLayout:
                     id: mn_left_grtotal_bxlt
                     orientation: 'horizontal'
-                    size_hint_y: 0.07694
+                    size_hint_y: 0.05
 
                     Label:
                         id: mn_left_grtotal_label_desc
@@ -107,18 +106,24 @@ ScreenManager:
                     id: mn_left_additem_btn
                     text: "Add Item"
                     on_release: root.add_to_left_popup()
-                    size_hint_y: 0.07694
+                    size_hint_y: 0.1
+                
+                Button:
+                    id: mn_left_clear_btn
+                    text: "Clear Items"
+                    on_release: root.clear_left_items()
+                    size_hint_y: 0.1
 
             #--- Right Layout
             BoxLayout:
                 id: mn_right_bxlt
                 orientation: 'vertical'
-                size_hint_x: 0.4285
+                size_hint_x: 0.4
 
                 ScrollView:
                     id: mn_right_scview
                     do_scroll_y: True
-                    size_hint_y: 1
+                    size_hint_y: 0.8
 
                     GridLayout:
                         id: mn_right_scview_grdlt
@@ -130,9 +135,14 @@ ScreenManager:
                 Button:
                     id: mn_right_addprsn_btn
                     text: "Add Person"
-                    on_release: root.add_to_right()
-                    size_hint_y: 0.0588
+                    on_release: root.add_to_right_popup()
+                    size_hint_y: 0.1
 
+                Button:
+                    id: mn_right_clear_btn
+                    text: "Clear Persons"
+                    on_release: root.clear_right_items()
+                    size_hint_y: 0.1
 <GridScreen>:
     orientation: 'vertical'
 
@@ -157,7 +167,7 @@ ScreenManager:
             BoxLayout:
                 id: grd_left_bxlt
                 orientation: 'vertical'
-                size_hint_x: 0.6667
+                size_hint_x: 0.5
 
                 #--- Left Header
                 GridLayout:
@@ -276,7 +286,7 @@ ScreenManager:
             BoxLayout:
                 id: grd_right_bxlt
                 orientation: 'vertical'
-
+                size_hint_x: 0.5
                 #--- Header 
                 ScrollView:
                     id: grd_right_hdr_scview
